--- a/databases/ruby-dm-rails/Makefile
+++ b/databases/ruby-dm-rails/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2013/01/31 15:46:51 taca Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 13:17:09 taca Exp $
 
 DISTNAME=	dm-rails-1.2.1
 PKGREVISION=	2
@@ -14,7 +14,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-dm-active_model>=1.2.0<1.3:../../databases/ruby-dm-a
 DEPENDS+=	${RUBY_ACTIONPACK_DEPENDS}
 DEPENDS+=	${RUBY_RAILTIES_DEPENDS}
 
-RUBY_RAILS_SUPPORTED=	3 31 32
+RUBY_RAILS_SUPPORTED=	32
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
