--- a/devel/ruby-shoulda-matchers/Makefile
+++ b/devel/ruby-shoulda-matchers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2017/05/04 15:12:34 taca Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/21 13:19:02 taca Exp $
 
 DISTNAME=	shoulda-matchers-2.8.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
@@ -9,7 +9,7 @@ HOMEPAGE=	http://thoughtbot.com/community/
 COMMENT=	Making tests easy on the fingers and eyes
 LICENSE=	mit
 
-DEPENDS+=	${RUBY_PKGPREFIX}-activesupport>=3.0.0:${RUBY_RAILS32_ACTIVESUPPORT}
+DEPENDS+=	${RUBY_ACTIVESUPPORT_DEPENDS}
 
 USE_LANGUAGES=	# none
 RUBY_RAILS_SUPPORTED=	32
