--- a/fonts/tex-xcharter/Makefile
+++ b/fonts/tex-xcharter/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.3 2016/08/07 07:17:37 markd Exp $
+# $NetBSD: Makefile,v 1.4 2017/06/21 13:25:35 markd Exp $
 
 DISTNAME=	xcharter
-PKGNAME=	tex-${DISTNAME}-1.078a
-TEXLIVE_REV=	41393
+PKGNAME=	tex-${DISTNAME}-1.08
+TEXLIVE_REV=	43465
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ctan.org/pkg/xcharter
 COMMENT=	Extension of Bitstream Charter fonts
-#LICENSE=	other-free
+LICENSE=	lppl-1.3c
 
 TEX_MAP_FILES+=	XCharter.map
 
