--- a/print/tex-texconfig/Makefile
+++ b/print/tex-texconfig/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2015/11/25 12:53:09 jperkin Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 13:25:33 markd Exp $
 
 DISTNAME=	texconfig
-PKGNAME=	tex-${DISTNAME}-2014
-TEXLIVE_REV=	34642
+PKGNAME=	tex-${DISTNAME}-2017
+TEXLIVE_REV=	44166
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Configuration utility for TeX
