--- a/databases/ruby-dm-types/Makefile
+++ b/databases/ruby-dm-types/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2017/06/01 04:36:56 taca Exp $
+# $NetBSD: Makefile,v 1.12 2017/06/21 13:34:27 taca Exp $
 
 DISTNAME=	dm-types-1.2.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,7 +13,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-bcrypt>=3.0<4:../../security/ruby-bcrypt
 DEPENDS+=	${RUBY_PKGPREFIX}-dm-core>=1.2.0<1.3:../../databases/ruby-dm-core
 DEPENDS+=	${RUBY_PKGPREFIX}-fastercsv>=1.5<2:../../textproc/ruby-fastercsv
 DEPENDS+=	${RUBY_PKGPREFIX}-multi_json>=1.0<2:../../textproc/ruby-multi_json
-DEPENDS+=	${RUBY_PKGPREFIX}-stringex>=1.4<2:../../textproc/ruby-stringex
+DEPENDS+=	${RUBY_PKGPREFIX}-stringex1>=1.4<2:../../textproc/ruby-stringex1
 DEPENDS+=	${RUBY_PKGPREFIX}-uuidtools>=2.1<3:../../devel/ruby-uuidtools
 
 .include "../../lang/ruby/gem.mk"
