--- a/textproc/ruby-haml/Makefile
+++ b/textproc/ruby-haml/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2015/09/13 15:18:07 taca Exp $
+# $NetBSD: Makefile,v 1.18 2017/06/21 14:29:25 taca Exp $
 
-DISTNAME=	haml-4.0.7
+DISTNAME=	haml-5.0.1
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -8,6 +8,7 @@ HOMEPAGE=	http://haml.info/
 COMMENT=	XHTML & CSS markup language & template engine
 LICENSE=	mit
 
+DEPENDS+=	${RUBY_PKGPREFIX}-temple>=0.8.0:../../textproc/ruby-temple
 DEPENDS+=	${RUBY_PKGPREFIX}-tilt>=0:../../textproc/ruby-tilt
 
 RUBYGEM_OPTIONS+=	--format-executable
