--- a/databases/ruby-activerecord-cassandra/Makefile
+++ b/databases/ruby-activerecord-cassandra/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2017/04/19 11:24:37 jperkin Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/21 15:42:10 taca Exp $
 
 DISTNAME=	activerecord-cassandra-adapter-0.1.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/-adapter//}
+PKGREVISION=	1
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
