--- a/devel/ruby-gettext-rails/Makefile
+++ b/devel/ruby-gettext-rails/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2011/12/13 15:52:18 taca Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/21 15:42:10 taca Exp $
 
 DISTNAME=	gettext_rails-2.1.0
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME:S/_/-/}
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
