--- a/devel/ruby-globalid/Makefile
+++ b/devel/ruby-globalid/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2017/06/21 13:12:20 taca Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/21 15:42:10 taca Exp $
 
 DISTNAME=	globalid-0.4.0
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	minskim@NetBSD.org
