--- a/net/py-twisted/Makefile
+++ b/net/py-twisted/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.33 2017/02/16 11:10:21 wiz Exp $
+# $NetBSD: Makefile,v 1.34 2017/06/21 18:35:35 adam Exp $
 
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
-PKGREVISION=	1
 COMMENT=	Framework for writing networked applications
 .include "../../net/py-twisted/Makefile.common"
 
 DEPENDS+=	${PYPKGPREFIX}-automat-[0-9]*:../../devel/py-automat
 DEPENDS+=	${PYPKGPREFIX}-constantly-[0-9]*:../../devel/py-constantly
+DEPENDS+=	${PYPKGPREFIX}-hyperlink-[0-9]*:../../www/py-hyperlink
 DEPENDS+=	${PYPKGPREFIX}-incremental-[0-9]*:../../devel/py-incremental
 DEPENDS+=	${PYPKGPREFIX}-OpenSSL>=0.6:../../security/py-OpenSSL
 DEPENDS+=	${PYPKGPREFIX}-service_identity-[0-9]*:../../security/py-service_identity
@@ -17,13 +17,6 @@ REPLACE_PYTHON+=	src/twisted/trial/test/scripttest.py
 REPLACE_PYTHON+=	src/twisted/python/test/pullpipe.py
 
 CFLAGS.SunOS+=	-D_XOPEN_SOURCE=1 -D_XOPEN_SOURCE_EXTENDED=1 -Du_int=uint32_t
-
-# twisted will install files present in the source directory even
-# though they were not in the tarball.  Therefore, we must clean the
-# .orig files from patches.  This is done pre-install rather than
-# post-patch so that mkpatches(1) will still work.
-pre-install:
-	rm -f ${WRKSRC}/twisted/runner/portmap.c.orig
 
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
@@ -39,7 +32,6 @@ do-test:
 # created during self test.
 CHECK_FILES_SKIP+=	${PREFIX}/${PYSITELIB}/twisted/plugins/dropin.cache
 
-# egg.mk restricts the Python version list
-.include "../../lang/python/egg.mk"
 .include "../../lang/python/application.mk"
+.include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
